update .env dan Jenkinsfile

--- a/.env
+++ b/.env
@@ -3,14 +3,14 @@
 MYSQL_ROOT_PASSWORD=RootGLPI2024!Secure
 MYSQL_DATABASE=glpi_database
 MYSQL_USER=glpi_user
-MYSQL_PASSWORD=GlpiUserPassword2024!Secure
+MYSQL_PASSWORD=Password
 
 # GLPI Configuration
 GLPI_DB_HOST=db
 GLPI_DB_PORT=3306
 GLPI_DB_NAME=glpi_database
 GLPI_DB_USER=glpi_user
-GLPI_DB_PASSWORD=GlpiUserPassword2024!Secure
+GLPI_DB_PASSWORD=Password
 
 # Timezone (sesuaikan dengan lokasi Anda)
 TZ=Asia/Jakarta
